force-app/main/default/objects/numm__Detail_des_repartitions__c/numm__Detail_des_repartitions__c.object-meta.xml
<CustomObject>
    <label>Détail des répartitions</label>
    <nameField>
        <displayFormat>DRep-{0000}</displayFormat>
        <label>Détail des répartitions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Détails des répartitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>