force-app/main/default/objects/numm__Detail_des_repartitions__c/fields/numm__Cle_de_repartition__c.field-meta.xml
<CustomField>
    <fullName>numm__Cle_de_repartition__c</fullName>
    <label>Clé de répartition</label>
    <referenceTo>numm__Cle_de_repartition__c</referenceTo>
    <relationshipLabel>Détails des répartitions</relationshipLabel>
    <relationshipName>Details_des_repartitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>