force-app/main/default/objects/numm__Detail_des_repartitions__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <label>Etablissement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Establishment__c.numm__TypeEtablissement__c</field>
            <operation>contains</operation>
            <value>Appartement, Parking, Proprietaire, Non réparti</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Détails des répartitions</relationshipLabel>
    <relationshipName>Details_des_repartitions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>