force-app/main/default/objects/numm__Detail_des_repartitions__c/fields/numm__Montant__c.field-meta.xml
<CustomField>
    <fullName>numm__Montant__c</fullName>
    <label>Montant (Tantième)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>