force-app/main/default/objects/numm__Detail_des_repartitions__c/fields/numm__TechUniciteCleEntEta__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniciteCleEntEta__c</fullName>
    <description>Unicité du tantième sur la clé, l&#39;entité et l&#39;établissement</description>
    <label>TechUniciteCleEntEta</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>