force-app/main/default/objects/numm__Detail_des_repartitions__c/validationRules/numm__Verification_de_Etablissement_Entite.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Verification_de_Etablissement_Entite</fullName>
    <active>true</active>
    <description>Vérification que l&#39;établissement soit un établissement de l&#39;entité de la clé</description>
    <errorConditionFormula>numm__Etablissement__r.numm__Entity__c &lt;&gt; numm__Cle_de_repartition__r.numm__Entite__c</errorConditionFormula>
    <errorMessage>Etablissement incorrecte. il ne correspond pas à l&#39;entité.</errorMessage>
</ValidationRule>